--- a/red-black-tree/Cargo.toml
+++ b/red-black-tree/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
-name = "tree"
+name = "red-black-tree"
 version = "0.1.0"
-authors = ["Hideki SHIRO <hideki@shiro.be>"]
+authors = ["Hideki <hideki@shiro.be>"]
 edition = "2018"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
