--- a/red-black-tree/Cargo.toml
+++ b/red-black-tree/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+ansi_term = "0.12"
 
 [dev-dependencies]
 rand = "0.7.0"
